## Process this file with automake to produce Makefile.in

profileplotdir = $(datadir)/gxsm3/profileplot

profileplot_SCRIPTS = \
gxsmplot1d-1.gri.sh \
gxsmplot1d-2.gri.sh \
gxsmplot1d-3.gri.sh \
gxsmplot1d-4.gri.sh \
gxsmplot1d-matplot.py \
gxsmplot1d-xmgrace.sh

EXTRA_DIST = $(profileplot_SCRIPTS)

